[workspace]
members = [
    "crates/*",
    "bins/sequencer"
]

[workspace.dependencies]
revm = { version = "14.0.3", features = ["std", "secp256k1", "blst"], default-features = false }
revm-inspectors = "0.7.6"
revm-primitives = { version = "10.0.0", features = ["std"], default-features = false }
reth = { git = "https://github.com/paradigmxyz/reth.git", branch = "main" }
axum = "0.7.7"
actix-web = "4"
tokio = { version = "1.40.0", features = ["full"] }
serde = "1.0.210"
database = { path = "crates/database", package = "sequencer-db", version = "0.1.0" }
alloy-chains = "0.1.32"
alloy-dyn-abi = "0.8.0"
alloy-primitives = { version = "0.8.4", default-features = false }
alloy-rlp = "0.3.4"
alloy-sol-types = "0.8.0"
alloy-trie = { version = "0.6", default-features = false }

alloy-consensus = { version = "0.3.6", default-features = false }
alloy-eips = { version = "0.3.6", default-features = false }
alloy-genesis = { version = "0.3.6", default-features = false }
alloy-json-rpc = { version = "0.3.6", default-features = false }
alloy-network = { version = "0.3.6", default-features = false }
alloy-network-primitives = { version = "0.3.6", default-features = false }
alloy-node-bindings = { version = "0.3.6", default-features = false }
alloy-provider = { version = "0.3.6", features = [
    "reqwest",
], default-features = false }
alloy-pubsub = { version = "0.3.6", default-features = false }
alloy-rpc-client = { version = "0.3.6", default-features = false }
alloy-rpc-types = { version = "0.3.6", features = [
    "eth",
], default-features = false }
alloy-rpc-types-admin = { version = "0.3.6", default-features = false }
alloy-rpc-types-anvil = { version = "0.3.6", default-features = false }
alloy-rpc-types-beacon = { version = "0.3.6", default-features = false }
alloy-rpc-types-debug = { version = "0.3.6", default-features = false }
alloy-rpc-types-engine = { version = "0.3.6", default-features = false }
alloy-rpc-types-eth = { version = "0.3.6", default-features = false }
alloy-rpc-types-mev = { version = "0.3.6", default-features = false }
alloy-rpc-types-trace = { version = "0.3.6", default-features = false }
alloy-rpc-types-txpool = { version = "0.3.6", default-features = false }
alloy-serde = { version = "0.3.6", default-features = false }
alloy-signer = { version = "0.3.6", default-features = false }
alloy-signer-local = { version = "0.3.6", default-features = false }
alloy-transport = { version = "0.3.6" }
alloy-transport-http = { version = "0.3.6", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ipc = { version = "0.3.6", default-features = false }
alloy-transport-ws = { version = "0.3.6", default-features = false }
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
