[workspace]
members = [
    "crates/*",
    "bins/sequencer"
]

[workspace.dependencies]
revm = { version = "14.0.3", features = ["std", "secp256k1", "blst"], default-features = false }
revm-primitives = { version = "10.0.0", features = ["std"], default-features = false }
axum = "0.7.7"
actix-web = "4"
tokio = { version = "1.40.0", features = ["full"] }
serde = "1.0.210"