[package]
name = "sequencer-bin"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
revm = { workspace = true }
revm-primitives = { workspace = true, features = ["serde"] }
reth = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
database = { workspace = true }
serde_json = { workspace = true }
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true }
eyre = { workspace = true }
mempool = { workspace = true }
rpc = { workspace = true }
jsonrpsee = { workspace = true }
jsonrpsee-types = { workspace = true }
reth-db = { workspace = true }
reth-db-api = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-testing-utils = { workspace = true }
reth-transaction-pool = { workspace = true, features = ["test-utils"] }
reth-primitives = { workspace = true, features = ["reth-codec", "std"] }
reth-provider = { workspace = true, features = ["test-utils"] }
reth-chainspec = { workspace = true }
reth-codecs = { workspace = true }
reth-rpc-eth-types = { workspace = true }
reth-rpc-eth-api = { workspace = true }
reth-network-api = { workspace = true }
reth-node-api = { workspace = true }
reth-rpc-server-types = { workspace = true }
reth-rpc = { workspace = true }
reth-tasks = { workspace = true }
alloy-consensus = { workspace = true }
alloy-network = { workspace = true }
derive_more = { workspace = true }
alloy-eips = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
futures = "0.3.31"
reth-e2e-test-utils.workspace = true
reth-node-builder.workspace = true
reth-node-ethereum.workspace = true
reth-payload-builder.workspace = true
alloy-rpc-types-engine= {workspace = true , version = "0.6.2"}
reth-tracing.workspace = true
reth-node-core.workspace = true
stardust-reth.workspace = true 
reth-optimism-node.workspace = true 


[patch.crates-io]
alloy-rpc-types-engine = "0.6.2"